[gd_scene load_steps=60 format=3 uid="uid://d1haqj8l8v4j0"]

[ext_resource type="Script" path="res://scenes/dark_magican.gd" id="1_hg7nv"]
[ext_resource type="Texture2D" uid="uid://dt883tt5mjsoc" path="res://assets/Wanderer Magican/Magic_sphere.png" id="1_mxjnh"]
[ext_resource type="Texture2D" uid="uid://dpk5g80ltwjc6" path="res://assets/Wanderer Magican/Attack_2.png" id="2_cpmm1"]
[ext_resource type="Texture2D" uid="uid://cm43vdo1u73gx" path="res://assets/Wanderer Magican/Dead.png" id="3_a0j80"]
[ext_resource type="Texture2D" uid="uid://bpp0uee0drt3d" path="res://assets/Wanderer Magican/Hurt.png" id="4_2xgeo"]
[ext_resource type="Texture2D" uid="uid://k2umu1ra7o6c" path="res://assets/Wanderer Magican/Idle.png" id="5_w5m42"]
[ext_resource type="Texture2D" uid="uid://djiaccfbbmdu4" path="res://assets/Wanderer Magican/Walk.png" id="6_31nk1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sgbou"]
atlas = ExtResource("1_mxjnh")
region = Rect2(0, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sasp"]
atlas = ExtResource("1_mxjnh")
region = Rect2(128, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oata"]
atlas = ExtResource("1_mxjnh")
region = Rect2(256, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jek4"]
atlas = ExtResource("1_mxjnh")
region = Rect2(384, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbmg0"]
atlas = ExtResource("1_mxjnh")
region = Rect2(512, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_mumvn"]
atlas = ExtResource("1_mxjnh")
region = Rect2(640, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8edm"]
atlas = ExtResource("1_mxjnh")
region = Rect2(768, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_alyrx"]
atlas = ExtResource("1_mxjnh")
region = Rect2(896, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_78y8l"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1024, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_fv8qr"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1152, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_o13em"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1280, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxym6"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1408, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_posc5"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1536, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqu2v"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1664, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0rw3"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1792, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rqoc"]
atlas = ExtResource("1_mxjnh")
region = Rect2(1920, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_38iy2"]
atlas = ExtResource("2_cpmm1")
region = Rect2(0, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg6hm"]
atlas = ExtResource("2_cpmm1")
region = Rect2(128, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_xp3lp"]
atlas = ExtResource("2_cpmm1")
region = Rect2(256, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1non"]
atlas = ExtResource("2_cpmm1")
region = Rect2(384, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxrqh"]
atlas = ExtResource("2_cpmm1")
region = Rect2(512, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_w71wx"]
atlas = ExtResource("2_cpmm1")
region = Rect2(640, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1egr"]
atlas = ExtResource("2_cpmm1")
region = Rect2(768, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_gofeg"]
atlas = ExtResource("2_cpmm1")
region = Rect2(896, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuypm"]
atlas = ExtResource("2_cpmm1")
region = Rect2(1024, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo82r"]
atlas = ExtResource("3_a0j80")
region = Rect2(0, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0y4e"]
atlas = ExtResource("3_a0j80")
region = Rect2(128, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p8ww"]
atlas = ExtResource("3_a0j80")
region = Rect2(256, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0qdd"]
atlas = ExtResource("3_a0j80")
region = Rect2(384, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_twk4y"]
atlas = ExtResource("4_2xgeo")
region = Rect2(0, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_drrpf"]
atlas = ExtResource("4_2xgeo")
region = Rect2(128, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_cytl4"]
atlas = ExtResource("4_2xgeo")
region = Rect2(256, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_wd8l6"]
atlas = ExtResource("4_2xgeo")
region = Rect2(384, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_66eo2"]
atlas = ExtResource("5_w5m42")
region = Rect2(0, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oon4"]
atlas = ExtResource("5_w5m42")
region = Rect2(128, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_omtl7"]
atlas = ExtResource("5_w5m42")
region = Rect2(256, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkrly"]
atlas = ExtResource("5_w5m42")
region = Rect2(384, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_20fwm"]
atlas = ExtResource("5_w5m42")
region = Rect2(512, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5hda"]
atlas = ExtResource("5_w5m42")
region = Rect2(640, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic6iq"]
atlas = ExtResource("5_w5m42")
region = Rect2(768, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nc2q"]
atlas = ExtResource("5_w5m42")
region = Rect2(896, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5qxl"]
atlas = ExtResource("6_31nk1")
region = Rect2(0, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mofp"]
atlas = ExtResource("6_31nk1")
region = Rect2(128, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv6pf"]
atlas = ExtResource("6_31nk1")
region = Rect2(256, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj4k7"]
atlas = ExtResource("6_31nk1")
region = Rect2(384, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lkc4"]
atlas = ExtResource("6_31nk1")
region = Rect2(512, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq7oc"]
atlas = ExtResource("6_31nk1")
region = Rect2(640, 53, 128, 75)

[sub_resource type="AtlasTexture" id="AtlasTexture_77w44"]
atlas = ExtResource("6_31nk1")
region = Rect2(768, 53, 128, 75)

[sub_resource type="SpriteFrames" id="SpriteFrames_ta5t3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgbou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sasp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oata")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jek4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbmg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mumvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8edm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alyrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78y8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fv8qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o13em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxym6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_posc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqu2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0rw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rqoc")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38iy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg6hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xp3lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1non")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxrqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w71wx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1egr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gofeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuypm")
}],
"loop": false,
"name": &"attack 2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo82r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0y4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p8ww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0qdd")
}],
"loop": false,
"name": &"dying",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_twk4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drrpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cytl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wd8l6")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_66eo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oon4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omtl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkrly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20fwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5hda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic6iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nc2q")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5qxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mofp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv6pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj4k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lkc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq7oc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77w44")
}],
"loop": false,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0cs7"]
size = Vector2(57, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kye3r"]
size = Vector2(33, 87)

[sub_resource type="CircleShape2D" id="CircleShape2D_rsi4j"]
radius = 25.02

[node name="DarkMagican" type="CharacterBody2D"]
position = Vector2(483, 409)
script = ExtResource("1_hg7nv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.25, 1.318)
sprite_frames = SubResource("SpriteFrames_ta5t3")
animation = &"attack 2"
frame = 8
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 0
position = Vector2(-4.5, 47)
shape = SubResource("RectangleShape2D_h0cs7")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-6.5, 5.5)
shape = SubResource("RectangleShape2D_kye3r")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="AttackBox" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(33, -9)
shape = SubResource("CircleShape2D_rsi4j")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
